//package com.sincetimes.redwar.game.comnunicate.protocol;

import "MsgBuildingItem.proto";
import "MsgPlanet.proto";
import "MsgMission.proto";

message MsgGameUnit
{
    optional int32 updatedAt = 1;
    optional int32 unlocked = 2;
    optional int32 timeLeft = 3;
    repeated int32 GameUnit = 4;
    optional string sku = 5;
    optional int32 upgradeId = 6;
}

message MsgBunkerUnit
{
    optional string sku = 1;
    repeated int32 Unit = 2;
}

message MsgBunker
{
    optional int32 sid = 1;
    optional string helpersAccountIds = 2;
    repeated MsgBunkerUnit Bunker = 3;
}

message MsgHangarUnit
{
    optional string sku = 1;
    optional int32 num = 2;
}

message MsgHangars
{
    optional int32 sid = 1;
    repeated MsgHangarUnit Hangar = 2;
}

message MsgSlot
{
    repeated int32 Ship = 1;
    optional int32 timeLeft = 2;
}

message MsgShipyardSlot
{
    optional string sku = 1;
    optional int32 num = 2;
    optional int32 timeLeft = 3;
}

message MsgShipyard
{
    optional int32 updatedAt = 1;
    optional int32 sid = 2;
    optional int32 block = 3;
    optional int32 unlockedSlots = 4;
    repeated MsgShipyardSlot Shipyard = 5;
}

message RseObtainUniverse
{
    optional bool vip = 1;
    optional bool yearVip = 2;
    optional int32 vipLevel = 3;
    optional bool newPlayerGiftBag = 4;
    optional bool everydayGiftBag = 5;
    optional int32 spyCapsulesTimeLeft = 6;
    optional string DCPlayerName = 7;
    optional string DCWorldName = 8;
    optional int32 levelBasedOnScore = 9;
    optional int32 DCPlayerRank = 10;
    optional int32 DCCoins = 11;
    optional int32 DCMinerals = 12;
    optional int32 score = 13;
    optional int32 exp = 14;
    optional int32 lastVisitTime = 15;
    optional int32 lastLevelNotified = 16;
    optional int32 DCCash = 17;
    optional int32 DCDroids = 18;
    optional int32 DCDroidsInUse = 19;
    optional int32 damageProtectionTimeLeft = 20;
    optional int32 damageProtectionTimeTotal = 21;
    optional bool tutorialCompleted = 22;
    optional string flags = 23;
    optional MsgMissionState Missions = 24;
    repeated MsgPlanet Planets = 25;
    repeated MsgBuildingItem Items = 26;
    repeated MsgShipyard Shipyards = 27;
    repeated MsgHangars Hangars = 28;
    repeated MsgBunker Bunkers = 29;
    repeated MsgGameUnit GameUnits = 30;
}

